UI READY...TEST 1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
 
-    <title>Rock, paper, scissors...shoot</title>
-    <script src="juego.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+
+  <title>Rock, paper, scissors...shoot</title>
+  <script src="juego.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+  <div class="moves">
+    <div class="move" id = "rockBtn">
+      <kbd>〇</kbd>
+      <span class="gameItem">ROCK</span>
+    </div>
+    <div class="move" id = "paperBtn">
+      <kbd>☰</kbd>
+      <span class="gameItem">PAPER</span>
+    </div>
+    <div class="move" id = "scissorsBtn">
+      <kbd>X</kbd>
+      <span class="gameItem">SCISSORS</span>
+    </div>
+
+  </div>
+  <div class="container">
+
+  </div>
+
+</body>
+
 </html>
